# tibidabot

./: .gitmodules  make.txt  readme
src/bumperbot_bringup/launch/: simulated_robot.launch.py
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/config/: joy_teleop.yaml  twist_mux_joy.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
src/bumperbot_controller/launch/: joystick_teleop.launch.py
src/bumperbot_controller/src/: twist_relay.cpp
src/bumperbot_description/: CMakeLists.txt
src/bumperbot_description/launch/: gazebo.launch.py
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
src/bumperbot_firmware/: CMakeLists.txt
src/bumperbot_localization/: CMakeLists.txt  package.xml
src/bumperbot_localization/include/bumperbot_localization/: odometry_motion_model.hpp
src/bumperbot_localization/launch/: global_localization.launch.py
src/bumperbot_localization/src/: odometry_motion_model.cpp
src/bumperbot_mapping/: CMakeLists.txt  package.xml
src/bumperbot_mapping/include/bumperbot_mapping/: mapping_with_known_poses.hpp
src/bumperbot_mapping/src/: mapping_with_known_poses.cpp
src/bumperbot_msgs/: package.xml
src/bumperbot_msgs/action/: Fibonacci.action
src/bumperbot_utils/: CMakeLists.txt  package.xml
src/bumperbot_utils/src/: safety_stop.cpp
src/tibidabot_cpp_examples/: CMakeLists.txt  package.xml
src/tibidabot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_lifecycle_node.cpp  simple_publisher.cpp  simple_subscriber.cpp
